--- a/HTML-text.html
+++ b/HTML-text.html
@@ -1,1 +1,8 @@
-<html><head></head><body></body></html>
+<html><head></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">&lt;?xml version="1.0" encoding="UTF-8"?&gt;
+&lt;Workspace
+   version = "1.0"&gt;
+   &lt;FileRef
+      location = "group:Runner.xcodeproj"&gt;
+   &lt;/FileRef&gt;
+&lt;/Workspace&gt;
+</pre></body></html>
